@@ -5,6 +5,8 @@ PHP                                                                        NEWS
 - Added PDO_MYSQL_ATTR_USE_BUFFERED_QUERY parameter for pdo_mysql. (Ilia)
 - Added date_timezone_set() function to set the timezone that the date
   functions will use. (Derick)
+- Added pg_fetch_all_columns() function to fetch all values of a column from
+  a result cursor. (Ilia)
 - Implemented feature request #33452 (Year belonging to ISO week). (Derick)
 - Fixed support for shared extensions on AIX. (Dmitry)
 - Fixed memory corruption in pg_copy_from() in case the as_null parameter was
